# swagger.json
@@ -5,9 +5,25 @@
     "description": "RESTful API for managing items and users using Node.js and MongoDB. Created by Jaydan Valencia for the CSE 341 course project.",
     "version": "1.0.0"
   },
-  "host": "cse-341-project2-qtpb.onrender.com",
+  "host": "localhost:3000",
   "basePath": "/",
-  "schemes": ["https"],
+  "schemes": ["http"],
+  "securityDefinitions": {
+    "githubAuth": {
+      "type": "oauth2",
+      "flow": "implicit",
+      "authorizationUrl": "/login",
+      "scopes": {
+        "read": "Read access",
+        "write": "Write access"
+      }
+    }
+  },
+  "security": [
+    {
+      "githubAuth": ["read", "write"]
+    }
+  ],
   "paths": {
     "/": {
       "get": {
@@ -56,6 +72,7 @@
         "responses": {
           "201": { "description": "Item created successfully" },
           "400": { "description": "Validation error" },
+          "401": { "description": "Unauthorized" },
           "500": { "description": "Internal Server Error" }
         }
       }
@@ -98,6 +115,7 @@
         "responses": {
           "204": { "description": "Item updated successfully" },
           "400": { "description": "Validation error" },
+          "401": { "description": "Unauthorized" },
           "500": { "description": "Internal Server Error" }
         }
       },
@@ -146,6 +164,7 @@
         "responses": {
           "201": { "description": "User created successfully" },
           "400": { "description": "Validation error" },
+          "401": { "description": "Unauthorized" },
           "500": { "description": "Internal Server Error" }
         }
       }
@@ -186,6 +205,7 @@
         "responses": {
           "204": { "description": "User updated successfully" },
           "400": { "description": "Validation error" },
+          "401": { "description": "Unauthorized" },
           "500": { "description": "Internal Server Error" }
         }
       },
